--- a/.github/workflows/report_number_of_yotas.yaml
+++ b/.github/workflows/report_number_of_yotas.yaml
@@ -17,7 +17,7 @@ jobs:
         run: python extract.py > members_yotas_message
 
       - name: send custom message to osscameroon channel
-        uses: appleboy/telegram-action@master
+      - uses: appleboy/telegram-action@master
         with:
           to: ${{ secrets.TELEGRAM_OSSCAMEROON_CHANNEL_ID }}
           token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
